           where Qt does not! Hmmmm....

           Fixed bug that segfaults when indicator is deleted.

20100918:  Improved the Yahoo and CSV plugin dialogs.

           Side panel now saves and restores last page viewed.

           Cleaned up and improved many dialogs and menus.

           Fixed logic errors in the group panel.

           Indicator tabs now shorten labels if they do not fit.

20100919:  Added new script command PROCESS. This allows scripts to fork a detached system process.

           Updated dialogs to display the session number they are children of.

20100920:  Moved indicator tables from data.sqlite into config.sqlite to keep multiple instances from
           trashing each other's settings. CVS users will need to delete their ~/.qtstalker directory
           before starting.

           Fixed SET_COLOR_ALL script API bug that set all colors to red.

           Added database write mutex locks to all classes. This gives a thread safe app except when running
           multiple instances and they try to write to the same table at the same time. Unless sqlite
           has a kernel process lock, there is a very small chance of inter-process database corruption
           in the group and script tables. If this becomes a problem in the future, we can always add
           a settings server and serve multiple qtstalker clients. Originally started to implement that,
           but decided to wait and see if we can manage without. Less code the better.

20100921:  New indicator dialog now saves and restores the last used indicator.

20100922:  Revised the CSV dialog to allow multiple threads to enable a batch of rules to run.
           Added a new tab to allow monitoring/stopping running threads.

20100924:  Revised dialogs to include error messages and confirmations without having to spawn
           a message box. Hoping to reduce popup messages to a minimum.
